<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextDisplay"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Temperature: 22.4°C" />

        <com.rmarinov.tempcheck.ui.views.SkeletonView
            android:id="@+id/skeleton_temperature"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextDisplay"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature"
            tools:text="Humidity: 91.3%" />

        <com.rmarinov.tempcheck.ui.views.SkeletonView
            android:id="@+id/skeleton_humidity"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skeleton_temperature" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="skeleton_humidity, tv_humidity" />

        <RadioGroup
            android:id="@+id/rg_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_current">

            <RadioButton
                android:id="@+id/rb_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/day"
                android:textAppearance="@style/TextMedium" />

            <RadioButton
                android:id="@+id/rb_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/week"
                android:textAppearance="@style/TextMedium" />

            <RadioButton
                android:id="@+id/rb_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/month"
                android:textAppearance="@style/TextMedium" />

            <RadioButton
                android:id="@+id/rb_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/year"
                android:textAppearance="@style/TextMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_period"
            tools:text="Average temperature: " />

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_start_date"
            tools:text="Average temperature: " />

        <TextView
            android:id="@+id/tv_min_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            tools:text="Average temperature: " />

        <TextView
            android:id="@+id/tv_max_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_min_temp"
            tools:text="Average temperature: " />

        <TextView
            android:id="@+id/tv_avg_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_max_temp"
            tools:text="Average temperature: " />

        <com.rmarinov.tempcheck.ui.views.SkeletonView
            android:id="@+id/skeleton_start_date"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_period" />

        <com.rmarinov.tempcheck.ui.views.SkeletonView
            android:id="@+id/skeleton_end_date"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skeleton_start_date" />

        <com.rmarinov.tempcheck.ui.views.SkeletonView
            android:id="@+id/skeleton_min_temp"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skeleton_end_date" />

        <com.rmarinov.tempcheck.ui.views.SkeletonView
            android:id="@+id/skeleton_max_temp"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skeleton_min_temp" />

        <com.rmarinov.tempcheck.ui.views.SkeletonView
            android:id="@+id/skeleton_avg_temp"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skeleton_max_temp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_skeleton_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids=" skeleton_humidity, skeleton_temperature" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tv_temperature, tv_humidity" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_skeleton_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="skeleton_start_date, skeleton_end_date, skeleton_min_temp, skeleton_max_temp, skeleton_avg_temp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tv_start_date, tv_end_date, tv_min_temp, tv_max_temp, tv_avg_temp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_alerts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/alerts"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>